# SelfBalancingBot

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/imu/: CMakeLists.txt
src/lib/imu/include/: helperMath.h  mpu6050.h
src/lib/imu/src/: mpu6050.cpp
src/lib/l298nMotor/: CMakeLists.txt
src/lib/l298nMotor/include/: l298nMotor.h
src/lib/l298nMotor/src/: l298nMotor.cpp
src/lib/pid/: CMakeLists.txt
src/lib/pid/include/: pid.h
src/lib/pid/src/: pid.cpp
